[package]
name = "osaka-sim-re"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
thiserror = "1.0"
bitmask = "^0.5"

[dev-dependencies]
color-eyre = "0.6.2"
pelite = "0.10"

[profile.dev.package.backtrace]
opt-level = 3
